--- a/src/be/ac/ulb/infof307/g06/views/settingsViews/SettingsV2.fxml
+++ b/src/be/ac/ulb/infof307/g06/views/settingsViews/SettingsV2.fxml
@@ -40,7 +40,7 @@
          </font>
       </Text>
       <Button fx:id="tagsBtn" defaultButton="true" graphicTextGap="0.0" layoutX="-1.0" layoutY="226.0"
-              mnemonicParsing="false" onAction="#events" onMouseEntered="#hover" onMouseExited="#unHover"
+              mnemonicParsing="false" onAction="#events" onMouseEntered="#hover" onMouseExited="#exitHover"
               prefHeight="78.0" prefWidth="531.0" style="-fx-background-color: #4fc3f7;" text="Tags                    "
               textAlignment="CENTER" textFill="#f2f1f0">
          <font>
@@ -57,7 +57,7 @@
          </opaqueInsets>
       </Button>
       <Button fx:id="languageBtn" graphicTextGap="0.0" layoutY="305.0" mnemonicParsing="false" onAction="#events"
-              onMouseEntered="#hover" onMouseExited="#unHover" prefHeight="78.0" prefWidth="531.0"
+              onMouseEntered="#hover" onMouseExited="#exitHover" prefHeight="78.0" prefWidth="531.0"
               style="-fx-background-color: #4fc3f7;" text="Language           " textFill="#f2f1f0">
          <font>
             <Font size="24.0"/>
@@ -67,7 +67,7 @@
          </cursor>
       </Button>
       <Button fx:id="storageBtn" graphicTextGap="0.0" layoutY="381.0" mnemonicParsing="false" onAction="#events"
-              onMouseEntered="#hover" onMouseExited="#unHover" prefHeight="78.0" prefWidth="531.0"
+              onMouseEntered="#hover" onMouseExited="#exitHover" prefHeight="78.0" prefWidth="531.0"
               style="-fx-background-color: #4fc3f7;" text="Storage             " textFill="#f2f1f0">
          <font>
             <Font size="24.0"/>
@@ -77,7 +77,7 @@
          </cursor>
       </Button>
       <Button fx:id="helpBtn" layoutY="459.0" mnemonicParsing="false" onAction="#events" onMouseEntered="#hover"
-              onMouseExited="#unHover" prefHeight="78.0" prefWidth="531.0" style="-fx-background-color: #4fc3f7;"
+              onMouseExited="#exitHover" prefHeight="78.0" prefWidth="531.0" style="-fx-background-color: #4fc3f7;"
               text="Help                 " textFill="#f2f1f0">
          <font>
             <Font size="24.0"/>
@@ -105,7 +105,7 @@
          </image>
       </ImageView>
       <Button fx:id="aboutBtn" layoutY="538.0" mnemonicParsing="false" onAction="#events" onMouseEntered="#hover"
-              onMouseExited="#unHover" prefHeight="78.0" prefWidth="531.0" style="-fx-background-color: #4fc3f7;"
+              onMouseExited="#exitHover" prefHeight="78.0" prefWidth="531.0" style="-fx-background-color: #4fc3f7;"
               text="About               " textFill="#f2f1f0">
          <font>
             <Font size="24.0"/>
@@ -115,7 +115,7 @@
          </cursor>
       </Button>
       <Button fx:id="backBtn" layoutX="1260.0" layoutY="820.0" mnemonicParsing="false" onAction="#events"
-              onMouseEntered="#hover" onMouseExited="#unHover" prefHeight="54.0" prefWidth="201.0"
+              onMouseEntered="#hover" onMouseExited="#exitHover" prefHeight="54.0" prefWidth="201.0"
               style="-fx-background-color: #4fc3f7;" text="BACK" textFill="WHITE">
          <font>
             <Font name="Calibri" size="24.0"/>
