--- a/src/be/ac/ulb/infof307/g06/views/calendarViews/CalendarView.fxml
+++ b/src/be/ac/ulb/infof307/g06/views/calendarViews/CalendarView.fxml
@@ -13,85 +13,77 @@
 <?import javafx.scene.text.Font?>
 <?import org.controlsfx.control.CheckComboBox?>
 
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
-            minWidth="-Infinity" prefHeight="900.0" prefWidth="1500.0" xmlns="http://javafx.com/javafx/15.0.1"
-            fx:controller="be.ac.ulb.infof307.g06.views.calendarViews.CalendarViewController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="900.0" prefWidth="1500.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="be.ac.ulb.infof307.g06.views.calendarViews.CalendarViewController">
     <children>
-        <ComboBox fx:id="colorsComboBox" layoutX="827.0" layoutY="27.0" onAction="#onColorSelected" prefWidth="150.0"/>
-        <Button fx:id="backBtn" layoutX="1387.0" layoutY="846.0" mnemonicParsing="false" onAction="#calendarEvents"
-                prefHeight="40.0" prefWidth="88.0" stylesheets="@../../resources/stylesheets/Button.css" text="BACK"
-                textFill="white"/>
-        <HBox layoutX="198.0" layoutY="19.0" prefHeight="40.0" prefWidth="187.0" spacing="20.0">
+        <ComboBox fx:id="colorsComboBox" layoutX="827.0" layoutY="36.0" onAction="#onColorSelected" prefWidth="150.0" />
+        <Button fx:id="backBtn" layoutX="1387.0" layoutY="846.0" mnemonicParsing="false" onAction="#calendarEvents" prefHeight="40.0" prefWidth="88.0" stylesheets="@../../resources/stylesheets/Button.css" text="BACK" textFill="white">
+         <font>
+            <Font size="18.0" />
+         </font></Button>
+        <HBox layoutX="198.0" layoutY="19.0" prefHeight="58.0" prefWidth="225.0" spacing="20.0">
             <children>
-                <Button fx:id="previousWeekBtn" mnemonicParsing="false" onAction="#calendarEvents" prefHeight="40.0"
-                        prefWidth="45.0" text="&lt;"/>
-                <Button fx:id="todayBtn" mnemonicParsing="false" onAction="#calendarEvents" prefHeight="40.0"
-                        prefWidth="63.0" text="today"/>
-                <Button fx:id="nextWeekBtn" mnemonicParsing="false" onAction="#calendarEvents" prefHeight="40.0"
-                        prefWidth="45.0" text="&gt;"/>
+                <Button fx:id="previousWeekBtn" mnemonicParsing="false" onAction="#calendarEvents" prefHeight="58.0" prefWidth="55.0" stylesheets="@../../resources/stylesheets/Button.css" text="&lt;" />
+                <Button fx:id="todayBtn" mnemonicParsing="false" onAction="#calendarEvents" prefHeight="58.0" prefWidth="74.0" stylesheets="@../../resources/stylesheets/Button.css" text="TODAY">
+               <font>
+                  <Font size="14.0" />
+               </font></Button>
+                <Button fx:id="nextWeekBtn" mnemonicParsing="false" onAction="#calendarEvents" prefHeight="58.0" prefWidth="55.0" stylesheets="@../../resources/stylesheets/Button.css" text="&gt;" />
             </children>
         </HBox>
         <ScrollPane layoutY="128.0" prefHeight="710.0" prefWidth="1500.0">
             <content>
-                <AnchorPane fx:id="anchorPaneDayView" minHeight="0.0" minWidth="0.0" prefHeight="710.0"
-                            prefWidth="1485.0">
+                <AnchorPane fx:id="anchorPaneDayView" minHeight="0.0" minWidth="0.0" prefHeight="710.0" prefWidth="1485.0">
                     <children>
                         <VBox fx:id="weekViewBox" layoutX="-4.0" prefHeight="710.0" prefWidth="1500.0" spacing="40">
                             <children>
-                                <WeekDayHeaderView fx:id="weekDays" prefHeight="29.0" prefWidth="1500.0"/>
-                                <AllDayView fx:id="projects" adjustToFirstDayOfWeek="true" minHeight="0.0"
-                                            prefHeight="723" prefWidth="0.0" rowHeight="50.0" showToday="false"/>
-                                <AllDayView fx:id="tasks" adjustToFirstDayOfWeek="true" disable="true" minHeight="0.0"
-                                            prefHeight="29.0" prefWidth="1485.0" rowHeight="20.0" showToday="false"/>
+                                <WeekDayHeaderView fx:id="weekDays" prefHeight="29.0" prefWidth="1500.0" />
+                                <AllDayView fx:id="projects" adjustToFirstDayOfWeek="true" minHeight="0.0" prefHeight="723" prefWidth="0.0" rowHeight="50.0" showToday="false" />
+                                <AllDayView fx:id="tasks" adjustToFirstDayOfWeek="true" disable="true" minHeight="0.0" prefHeight="29.0" prefWidth="1485.0" rowHeight="20.0" showToday="false" />
                             </children>
                         </VBox>
-                        <VBox fx:id="monthViewBox" layoutX="-4.0" prefHeight="710.0" prefWidth="1500.0">
+                        <VBox fx:id="monthViewBox" layoutX="-4.0" prefHeight="710.0" prefWidth="1500.0" spacing="20.0">
                             <children>
-                                <WeekDayHeaderView fx:id="monthHeader1" prefHeight="29.0" prefWidth="1500.0"/>
-                                <AllDayView fx:id="monthWeek1" prefHeight="128.0" prefWidth="1485.0"/>
-                                <WeekDayHeaderView fx:id="monthHeader2" prefHeight="25.0" prefWidth="1493.0"/>
-                                <AllDayView fx:id="monthWeek2" prefHeight="128.0" prefWidth="1485.0"/>
-                                <WeekDayHeaderView fx:id="monthHeader3" prefHeight="25.0" prefWidth="1493.0"/>
-                                <AllDayView fx:id="monthWeek3" prefHeight="128.0" prefWidth="1485.0"/>
-                                <WeekDayHeaderView fx:id="monthHeader4" prefHeight="25.0" prefWidth="1493.0"/>
-                                <AllDayView fx:id="monthWeek4" prefHeight="128.0" prefWidth="1485.0"/>
-                                <WeekDayHeaderView fx:id="monthHeader5" prefHeight="25.0" prefWidth="1493.0"/>
-                                <AllDayView fx:id="monthWeek5" prefHeight="128.0" prefWidth="1485.0"/>
+                                <WeekDayHeaderView fx:id="monthHeader1" prefHeight="29.0" prefWidth="1500.0" />
+                                <AllDayView fx:id="monthWeek1" prefHeight="128.0" prefWidth="1485.0" />
+                                <WeekDayHeaderView fx:id="monthHeader2" prefHeight="25.0" prefWidth="1493.0" />
+                                <AllDayView fx:id="monthWeek2" prefHeight="128.0" prefWidth="1485.0" />
+                                <WeekDayHeaderView fx:id="monthHeader3" prefHeight="25.0" prefWidth="1493.0" />
+                                <AllDayView fx:id="monthWeek3" prefHeight="128.0" prefWidth="1485.0" />
+                                <WeekDayHeaderView fx:id="monthHeader4" prefHeight="25.0" prefWidth="1493.0" />
+                                <AllDayView fx:id="monthWeek4" prefHeight="128.0" prefWidth="1485.0" />
+                                <WeekDayHeaderView fx:id="monthHeader5" prefHeight="25.0" prefWidth="1493.0" />
+                                <AllDayView fx:id="monthWeek5" prefHeight="128.0" prefWidth="1485.0" />
                             </children>
                         </VBox>
-                        <Line fx:id="line1" endX="210.5" opacity="0.2" startX="210.5" startY="9.9999999999999E13"/>
-                        <Line fx:id="line2" endX="415.0" layoutX="10.0" layoutY="10.0" opacity="0.2" startX="415.0"
-                              startY="9.9999999999999E13"/>
-                        <Line fx:id="line3" endX="619.5" layoutX="20.0" layoutY="20.0" opacity="0.2" startX="619.5"
-                              startY="9.9999999999999E13"/>
-                        <Line fx:id="line4" endX="823.75" layoutX="30.0" layoutY="30.0" opacity="0.2" startX="823.75"
-                              startY="9.9999999999999E13"/>
-                        <Line fx:id="line5" endX="1027.75" layoutX="40.0" layoutY="40.0" opacity="0.2" startX="1027.75"
-                              startY="9.9999999999999E13"/>
-                        <Line fx:id="line6" endX="1232.15" layoutX="50.0" layoutY="50.0" opacity="0.2" startX="1232.15"
-                              startY="9.9999999999999E13"/>
+                        <Line fx:id="line1" endX="210.5" opacity="0.2" startX="210.5" startY="9.9999999999999E13" />
+                        <Line fx:id="line2" endX="415.0" layoutX="10.0" layoutY="10.0" opacity="0.2" startX="415.0" startY="9.9999999999999E13" />
+                        <Line fx:id="line3" endX="619.5" layoutX="20.0" layoutY="20.0" opacity="0.2" startX="619.5" startY="9.9999999999999E13" />
+                        <Line fx:id="line4" endX="823.75" layoutX="30.0" layoutY="30.0" opacity="0.2" startX="823.75" startY="9.9999999999999E13" />
+                        <Line fx:id="line5" endX="1027.75" layoutX="40.0" layoutY="40.0" opacity="0.2" startX="1027.75" startY="9.9999999999999E13" />
+                        <Line fx:id="line6" endX="1232.15" layoutX="50.0" layoutY="50.0" opacity="0.2" startX="1232.15" startY="9.9999999999999E13" />
                     </children>
                 </AnchorPane>
             </content>
         </ScrollPane>
-        <CheckComboBox fx:id="projectComboBox" layoutX="569.0" layoutY="27.0" prefHeight="25.0" prefWidth="160"/>
-        <Label fx:id="monthLabel" alignment="CENTER_RIGHT" layoutX="1094.0" layoutY="-4.0" prefHeight="93.0"
-               prefWidth="381.0" text="December  2021">
+        <CheckComboBox fx:id="projectComboBox" layoutX="569.0" layoutY="36.0" prefHeight="25.0" prefWidth="160" />
+        <Label fx:id="monthLabel" alignment="CENTER_RIGHT" layoutX="1094.0" layoutY="-4.0" prefHeight="93.0" prefWidth="381.0" text="December  2021">
             <font>
-                <Font size="48.0"/>
+                <Font size="48.0" />
             </font>
         </Label>
-        <Label layoutX="449.0" layoutY="29.0" prefHeight="20.0" prefWidth="120.0" text="Projects to show:">
+        <Label layoutX="449.0" layoutY="38.0" prefHeight="20.0" prefWidth="120.0" text="Projects to show:">
             <font>
-                <Font size="14.0"/>
+                <Font size="14.0" />
             </font>
         </Label>
-        <Label layoutX="775.0" layoutY="29.0" text="Colors:">
+        <Label layoutX="775.0" layoutY="38.0" text="Colors:">
             <font>
-                <Font size="14.0"/>
+                <Font size="14.0" />
             </font>
         </Label>
-        <Button fx:id="viewBtn" layoutX="59.0" layoutY="19.0" mnemonicParsing="false" onAction="#calendarEvents"
-                prefHeight="40.0" prefWidth="109.0" text="View"/>
+        <Button fx:id="viewBtn" layoutX="51.0" layoutY="19.0" mnemonicParsing="false" onAction="#calendarEvents" prefHeight="58.0" prefWidth="120.0" stylesheets="@../../resources/stylesheets/Button.css" text="VIEW">
+         <font>
+            <Font size="18.0" />
+         </font></Button>
     </children>
 </AnchorPane>
