--- a/src/be/ac/ulb/infof307/g06/views/projectViews/CloudSelectionView.fxml
+++ b/src/be/ac/ulb/infof307/g06/views/projectViews/CloudSelectionView.fxml
@@ -2,10 +2,11 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.*?>
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/16"
+<AnchorPane xmlns:fx="http://javafx.com/fxml/1" fx:id="layout" xmlns="http://javafx.com/javafx/16"
             fx:controller="be.ac.ulb.infof307.g06.views.projectViews.CloudSelectionViewController">
    <children>
       <HBox layoutY="7.0" prefHeight="258.2" prefWidth="481.6" spacing="80.0" AnchorPane.bottomAnchor="0.0"
@@ -16,6 +17,9 @@
                <graphic>
                   <ImageView fitHeight="150.0" fitWidth="162.0" pickOnBounds="true" preserveRatio="true">
                      <Image url="@../../resources/icons/Google_Drive.png"/>
+                     <cursor>
+                        <Cursor fx:constant="HAND"/>
+                     </cursor>
                   </ImageView>
                </graphic>
             </Button>
@@ -24,6 +28,9 @@
                <graphic>
                   <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
                      <Image url="@../../resources/icons/Dropbox_Icon.png"/>
+                     <cursor>
+                        <Cursor fx:constant="HAND"/>
+                     </cursor>
                   </ImageView>
                </graphic>
             </Button>
